--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
       <div class="footer__column footer__column_content_social">
         <h4 class="footer__column-heading">Соцсети</h4>
         <ul class="footer__column-links">
-          <li class="footer__column-link"><a href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook</a></li>
+          <li class="footer__column-link"><a href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Фейсбук</a></li>
           <li class="footer__column-link"><a href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
-          <li class="footer__column-link"><a href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram</a></li>
+          <li class="footer__column-link"><a href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Инстаграм</a></li>
         </ul>
       </div>
 
