--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 
   <main class="content">
 
-    <article class="description">
-      <div class="two-columns">
+    <section class="description" aria-label="Секция со статьей">
+      <article class="two-columns">
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
         <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
         <p class="two-columns__paragraph"> <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
         <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
-      </div>
-    </article>
+      </article>
+    </section>
 
     <section class="digits">
-      <h3 class="section-title">Цифры и факты</h3>
+      <h2 class="section-title">Цифры и факты</h2>
       <p class="section-subtitle">Про учёбу и мозг</p>
 
       <ul class="table">
@@ -91,7 +91,7 @@
     </section>
 
     <section class="kaufman">
-      <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
+      <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
       <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
 
       <ul class="table table_theme_dark">
@@ -162,18 +162,18 @@
       <nav class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
-          <li class="footer__column-link"><a href="#">Главная</a></li>
-          <li class="footer__column-link"><a href="#">Концепция</a></li>
-          <li class="footer__column-link"><a href="#">Наставники</a></li>
+          <li><a class="footer__column-link" href="#">Главная</a></li>
+          <li><a class="footer__column-link" href="#">Концепция</a></li>
+          <li><a class="footer__column-link" href="#">Наставники</a></li>
         </ul>
       </nav>
 
       <div class="footer__column footer__column_content_social">
         <h4 class="footer__column-heading">Соцсети</h4>
         <ul class="footer__column-links">
-          <li class="footer__column-link"><a href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li>
-          <li class="footer__column-link"><a href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
-          <li class="footer__column-link"><a href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
+          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li>
+          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
+          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
         </ul>
       </div>
 
