--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 </head>
 
 <body class="page">
+
   <header class="header">
     <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Яндекс Практикум">
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
-    <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
-    <div class="header__square-pic"></div>
+    <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение Опять двойка">
+    <div class="header__square-pic rotation"></div>
+
   </header>
 
   <main class="content">
 
-    <section class="description" aria-label="Секция со статьей">
+    <section class="description" aria-label="Секция со статьей про главные проблемы в обучении">
       <article class="two-columns">
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
@@ -31,6 +33,83 @@
         <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
       </article>
+    </section>
+
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
+      <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+
+      <ul class="cards">
+        <li class="cards__item">
+          <img class="cards__image" src="./images/cards-attention.png" alt="Два вида внимания">
+          <h4 class="cards__title">Два вида внимания</h4>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+        </li>
+
+        <li class="cards__item">
+          <img class="cards__image" src="./images/cards-recall.png" alt="Два вида внимания">
+          <h4 class="cards__title">Recall</h4>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </li>
+
+        <li class="cards__item">
+          <img class="cards__image" src="./images/cards-interliving.png" alt="Два вида внимания">
+          <h4 class="cards__title">Интерливинг</h4>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </li>
+
+        <li class="cards__item">
+          <img class="cards__image" src="./images/cards-question.png" alt="Два вида внимания">
+          <h4 class="cards__title">Вопросы</h4>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+        </li>
+
+        <li class="cards__item">
+          <img class="cards__image" src="./images/cards-competence.png" alt="Два вида внимания">
+          <h4 class="cards__title">Иллюзия компетентности</h4>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+        </li>
+
+      </ul>
+    </section>
+
+    <section class="video">
+      <h2 class="section-title">Видео нa TED</h2>
+      <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+
+      <div class="video__iframes">
+        <iframe class="video__iframe"
+          src="https://www.youtube.com/embed/arj7oStGLkU"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+
+        <iframe class="video__iframe"
+          src="https://www.youtube.com/embed/5MgBikgcWnY"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+      </div>
+
+    </section>
+
+    <section class="oakley" aria-label="Секция со статьей про историю Барбары Оакли">
+
+      <article class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+        <div class="two-columns__main-text">
+        <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+        </div>
+      </article>
+
+    </section>
+
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <p class="feynman__subtitle">Выучить и не забыть.</p>
+      <a class="feynman__link" href="#">Подробнее →</a>
     </section>
 
     <section class="digits">
@@ -83,10 +162,19 @@
         </ul>
     </section>
 
-    <section class="feynman">
-      <h2 class="feynman__title">Метод Фейнмана</h2>
-      <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a class="feynman__link" href="#">Подробнее →</a>
+    <section class="khan">
+      <div class="khan__container">
+        <div class="khan__author">Салман Хан</div>
+        <h2 class="khan__title">Весь мир — школа</h2>
+        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+        <div class="khan__quote-author">Джордж Лукас</div>
+        <div class="khan__quote-author-subline">Кинорежиссер, продюсер</div>
+
+        <div class="khan__book-container">
+          <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Изображение обложки книги Салман Хана">
+          <a class="khan__buy-link" href="#">Купить книгу →</a>
+        </div>
+      </div>
     </section>
 
     <section class="kaufman">
@@ -145,9 +233,23 @@
           </li>
       </ul>
 
-      <div class="kaufman__triangle"></div>
+      <div class="kaufman__triangle rotation"></div>
 
     </section>
+
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+
+      <div class="resources__logo-zone">
+      <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt=""></a>
+      <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt=""></a>
+      <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt=""></a>
+      <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt=""></a>
+      </div>
+
+    </section>
+
   </main>
 
   <footer class="footer">
