--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body class="page">
 
   <header class="header">
-    <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Яндекс Практикум">
+    <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
     <h1 class="header__title">Научиться учиться</h1>
-    <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
-    <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение Опять двойка">
+    <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="link header__link" href="#">Узнать →</a></p>
+    <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение картины Опять двойка">
     <div class="header__square-pic rotation"></div>
 
   </header>
@@ -41,31 +41,31 @@
 
       <ul class="cards">
         <li class="cards__item">
-          <img class="cards__image" src="./images/cards-attention.png" alt="Два вида внимания">
+          <img class="cards__image" src="./images/cards-attention.png" alt="Изображение к карточке Два вида внимания">
           <h4 class="cards__title">Два вида внимания</h4>
           <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
         </li>
 
         <li class="cards__item">
-          <img class="cards__image" src="./images/cards-recall.png" alt="Два вида внимания">
+          <img class="cards__image" src="./images/cards-recall.png" alt="Изображение к карточке Запоминание">
           <h4 class="cards__title">Recall</h4>
           <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
         </li>
 
         <li class="cards__item">
-          <img class="cards__image" src="./images/cards-interliving.png" alt="Два вида внимания">
+          <img class="cards__image" src="./images/cards-interliving.png" alt="Изображение к карточке Интерливинг">
           <h4 class="cards__title">Интерливинг</h4>
           <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
         </li>
 
         <li class="cards__item">
-          <img class="cards__image" src="./images/cards-question.png" alt="Два вида внимания">
+          <img class="cards__image" src="./images/cards-question.png" alt="Изображение к карточке Вопросы">
           <h4 class="cards__title">Вопросы</h4>
           <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
         </li>
 
         <li class="cards__item">
-          <img class="cards__image" src="./images/cards-competence.png" alt="Два вида внимания">
+          <img class="cards__image" src="./images/cards-competence.png" alt="Изображение к карточке Иллюзия компетентности">
           <h4 class="cards__title">Иллюзия компетентности</h4>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
         </li>
@@ -109,7 +109,7 @@
     <section class="feynman">
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a class="feynman__link" href="#">Подробнее →</a>
+      <a class="link feynman__link" href="#">Подробнее →</a>
     </section>
 
     <section class="digits">
@@ -164,15 +164,15 @@
 
     <section class="khan">
       <div class="khan__container">
-        <div class="khan__author">Салман Хан</div>
+        <p class="khan__author">Салман Хан</p>
         <h2 class="khan__title">Весь мир — школа</h2>
-        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-        <div class="khan__quote-author">Джордж Лукас</div>
-        <div class="khan__quote-author-subline">Кинорежиссер, продюсер</div>
+        <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
 
         <div class="khan__book-container">
-          <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Изображение обложки книги Салман Хана">
-          <a class="khan__buy-link" href="#">Купить книгу →</a>
+          <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Изображение обложки книги Весь мир - школа">
+          <a class="link khan__buy-link" href="#">Купить книгу →</a>
         </div>
       </div>
     </section>
@@ -242,10 +242,10 @@
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
 
       <div class="resources__logo-zone">
-      <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt=""></a>
-      <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt=""></a>
-      <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt=""></a>
-      <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt=""></a>
+      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас"></a>
+      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип Н+1"></a>
+      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип КБ Стрелка"></a>
+      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Полька"></a>
       </div>
 
     </section>
@@ -256,25 +256,25 @@
     <div class="footer__columns">
 
       <div class="footer__column footer__column_content_copyright">
-        <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
+        <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
         <p class="footer__author">&copy; Родионов Андрей</p>
       </div>
 
       <nav class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
-          <li><a class="footer__column-link" href="#">Главная</a></li>
-          <li><a class="footer__column-link" href="#">Концепция</a></li>
-          <li><a class="footer__column-link" href="#">Наставники</a></li>
+          <li><a class="link footer__column-link" href="#">Главная</a></li>
+          <li><a class="link footer__column-link" href="#">Концепция</a></li>
+          <li><a class="link footer__column-link" href="#">Наставники</a></li>
         </ul>
       </nav>
 
       <div class="footer__column footer__column_content_social">
         <h4 class="footer__column-heading">Соцсети</h4>
         <ul class="footer__column-links">
-          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li>
-          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
-          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
+          <li><a class="link footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li>
+          <li><a class="link footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
+          <li><a class="link footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
         </ul>
       </div>
 
