--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Первая проектная работа на Яндекс Практикуме">
@@ -242,10 +242,10 @@
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
 
       <div class="resources__logo-zone">
-      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас"></a>
-      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип Н+1"></a>
-      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип КБ Стрелка"></a>
-      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Полька"></a>
+      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="Логотип Арзамас"></a>
+      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/resources-n1.svg" alt="Логотип Н+1"></a>
+      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/resources-strelka.svg" alt="Логотип КБ Стрелка"></a>
+      <a class="link resources__link" href="#"><img class="resources__logo" src="./images/resources-polka.svg" alt="Логотип Полька"></a>
       </div>
 
     </section>
@@ -255,12 +255,12 @@
   <footer class="footer">
     <div class="footer__columns">
 
-      <div class="footer__column footer__column_content_copyright">
+      <div class="footer__column_content_copyright">
         <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
         <p class="footer__author">&copy; Родионов Андрей</p>
       </div>
 
-      <nav class="footer__column footer__column_content_info">
+      <nav class="footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
           <li><a class="link footer__column-link" href="#">Главная</a></li>
@@ -269,7 +269,7 @@
         </ul>
       </nav>
 
-      <div class="footer__column footer__column_content_social">
+      <div class="footer__column_content_social">
         <h4 class="footer__column-heading">Соцсети</h4>
         <ul class="footer__column-links">
           <li><a class="link footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li>
