--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
   <footer class="footer">
     <div class="footer__columns">
 
-      <div class="footer__column_content_copyright">
+      <div class="footer__column footer__column_content_copyright">
         <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
         <p class="footer__author">&copy; Родионов Андрей</p>
       </div>
 
-      <nav class="footer__column_content_info">
+      <nav class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
           <li><a class="link footer__column-link" href="#">Главная</a></li>
@@ -269,7 +269,7 @@
         </ul>
       </nav>
 
-      <div class="footer__column_content_social">
+      <div class="footer__column footer__column_content_social">
         <h4 class="footer__column-heading">Соцсети</h4>
         <ul class="footer__column-links">
           <li><a class="link footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li>
